Added images, links and css on them.

--- a/index.html
+++ b/index.html
@@ -33,12 +33,94 @@
         </div>
             <div class="hero-text">
                 <h1>
-                    <span class="firstword">Solving</span><br/>Problem & Creating
+                    <span class="firstword">Solving</span><br/>Problems & Creating
                 <br/> Solutions
                 </h1>
                 <a href="#" class="resume-cta"><span class="resume-text">Resume</span></a>
             </div>        
     </section>
     <!--End of Hero Section-->
+
+    <!--Project Section-->
+    <section id="projects">
+        <div class="project-container">
+            <div class="project-header">Projects</div>
+            <div class="projects">
+
+                <!--Office Website-->
+                <div class="projects-items">
+                    <div class="movie-project">
+                        <div class="text-container">
+                            <h2 class="name">Movie Recommendation</h2>
+                            <div class="content">
+                                <p>
+                                    this is my website.
+                                    You are welcome here. Visit my project.
+                                    I'm open for colleboration.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                    Consequuntur excepturi facilis, inventore eos eum rem quos natus rerum voluptatum veritatis sit aperiam 
+                                    ad vero nihil pariatur commodi aut eveniet temporibus?
+                                </p>
+                            </div>
+                            <button class="button">
+                                <a href="https://github.com/krishnachaudhary596/MovieRecommendationSystemUsingMachineLearning" target="_blank">
+                                    <h3>View Project</h3>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Store Website-->
+                <div class="projects-items">
+                    <div class="gym-project">
+                        <div class="text-container">
+                            <h2 class="name">AI Gym Trainer</h2>
+                            <div class="content">
+                                <p>
+                                    this is my website.
+                                    You are welcome here. Visit my project.
+                                    I'm open for colleboration.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                    Consequuntur excepturi facilis, inventore eos eum rem quos natus rerum voluptatum veritatis sit aperiam 
+                                    ad vero nihil pariatur commodi aut eveniet temporibus?
+                                </p>
+                            </div>
+                            <button class="button">
+                                <a href="https://github.com/krishnachaudhary596/AI-Trainer-Using-OpenCV-and-Mediapipe" target="_blank">
+                                    <h3>View Project</h3>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Sports Project-->
+                <div class="projects-items">
+                    <div class="dsa-project">
+                        <div class="text-container">
+                            <h2 class="name">DSA Solutions</h2>
+                            <div class="content">
+                                <p>
+                                    this is my website.
+                                    You are welcome here. Visit my project.
+                                    I'm open for colleboration.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                    Consequuntur excepturi facilis, inventore eos eum rem quos natus rerum voluptatum veritatis sit aperiam 
+                                    ad vero nihil pariatur commodi aut eveniet temporibus?
+                                </p>
+                            </div>
+                            <button class="button">
+                                <a href="https://github.com/krishnachaudhary596/Solution-of-DSA-by-Kunal" target="_blank">
+                                    <h3>View Project</h3>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
