Adding about me section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="projects-items">
                     <div class="movie-project">
                         <div class="text-container">
-                            <h2 class="name">Movie Recommendation</h2>
+                            <h2 class="name" style="font-size: 1.8em;">Movie Recommendation</h2>
                             <div class="content">
                                 <p>
                                     this is my website.
@@ -75,7 +75,7 @@
                 <div class="projects-items">
                     <div class="gym-project">
                         <div class="text-container">
-                            <h2 class="name">AI Gym Trainer</h2>
+                            <h2 class="name" style="font-size: 1.8em;">AI Gym Trainer</h2>
                             <div class="content">
                                 <p>
                                     this is my website.
@@ -99,7 +99,7 @@
                 <div class="projects-items">
                     <div class="dsa-project">
                         <div class="text-container">
-                            <h2 class="name">DSA Solutions</h2>
+                            <h2 class="name" style="font-size: 1.8em;">DSA Solutions</h2>
                             <div class="content">
                                 <p>
                                     this is my website.
@@ -118,9 +118,44 @@
                         </div>
                     </div>
                 </div>
-
+                
             </div>
         </div>
     </section>
+    <!--End of Project Section-->
+
+    <!--About Section-->
+    <section id="abountme">
+        <div class="about-container">
+            <div class="about-section">
+                <div class="img-container">
+                    <div class="about-image"></div>
+                </div>
+                <div class="about-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Dicta, ex delectus laboriosam sint voluptatibus asperiores
+                    culpa laborum, nam cumque ut a fugit amet illo sapiente
+                    nulla consequuntur dolore neque minus.
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End of About Section-->
+
+    <!--Social Icons/Contact me-->
+    <section id="contactme">
+        <div class="social-icons">
+            <div class="fb">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+            </div>
+            <div class="ig">
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+            <div class="tw">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+    </section>
+    <!--Socail Icons/Contact me-->
 </body>
 </html>
