Finished designing basic stuffs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,30 @@
             </div>
         </div>
     </section>
-    <!--End of Navbar-->
+    <!--End of Desktop Navbar-->
+    
+    <!--Mobile Navbar-->
+    <section id="mobile-nav">
+        <div class="mobile-nav-bar">
+            <div class="links">
+                <ul>
+                    <li>
+                        <a href="#name"<i class="fas fa-home"></i></a>
+                    </li>
+                    <li>
+                        <a href="#projects" id="projects"><i class="fas fa-folder"></i></a>
+                    </li>
+                    <li>
+                        <a href="#about" id="about"><i class="fas fa-user"></i></a>
+                    </li>
+                    <li>
+                        <a href="#contact" id="contact"><i class="fas fa-envelope-open-text"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!--End of Mobile Navbar-->
 
     <!--Hero Section-->
     <section id="hero">
@@ -153,6 +176,12 @@
             </div>
             <div class="tw">
                 <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="gh">
+                <a href="https://github.com/krishnachaudhary596"><i class="fab fa-github"></i></a>
+            </div>
+            <div class="li">
+                <a href="https://www.linkedin.com/in/krishna-chaudhary-b99020179/"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </section>
