Added css folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
     <script src="https://kit.fontawesome.com/ae199364c6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="style.css" /> -->
     <title>Portfolio Site</title>
 </head>
 <body>
