--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
     <script src="https://kit.fontawesome.com/ae199364c6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="style.css" /> -->
     <title>Portfolio Site</title>
 </head>
 <body>
@@ -15,10 +13,12 @@
     <section id="nav">
         <div class="nav-bar">
             <div class="links">
+                <div class="logo-title">
+                    <a href="#name" id="name">Krishna Chaudhary</a>
+                </div>
                 <ul>
-                    <li><a href="#name" id="name">Krishna Chaudhary</a></li>
                     <li><a href="#projects" id="project">Projects</a></li>
-                    <li><a href="#aboutme" id="about">About</a></li>
+                    <li><a href="#about">About</a></li>
                     <li><a href="#contactme" id="contact">Contact</a></li>
                 </ul>
             </div>
@@ -32,16 +32,16 @@
             <div class="links">
                 <ul>
                     <li>
-                        <a href="#name"<i class="fas fa-home"></i></a>
+                        <a href="#hero"><i class="fas fa-home"></i></a>
                     </li>
                     <li>
-                        <a href="#projects" id="projects"><i class="fas fa-folder"></i></a>
+                        <a href="#projects"><i class="fas fa-folder"></i></a>
                     </li>
                     <li>
-                        <a href="#about" id="about"><i class="fas fa-user"></i></a>
+                        <a href="#about"><i class="fas fa-user"></i></a>
                     </li>
                     <li>
-                        <a href="#contact" id="contact"><i class="fas fa-envelope-open-text"></i></a>
+                        <a href="#contact" ><i class="fas fa-envelope-open-text"></i></a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,7 @@
                     <span class="firstword">Solving</span><br/>Problems & Creating
                 <br/> Solutions
                 </h1>
-                <a href="#" class="resume-cta"><span class="resume-text">Resume</span></a>
+                <a href="images/Resume.pdf" class="resume-cta" target="_blank"><span class="resume-text">Resume</span></a>
             </div>        
     </section>
     <!--End of Hero Section-->
@@ -76,21 +76,23 @@
                     <div class="movie-project">
                         <div class="text-container">
                             <h2 class="name" style="font-size: 1.8em;">Movie Recommendation</h2>
-                            <div class="content">
-                                <p>
-                                    this is my website.
-                                    You are welcome here. Visit my project.
-                                    I'm open for colleboration.
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                    Consequuntur excepturi facilis, inventore eos eum rem quos natus rerum voluptatum veritatis sit aperiam 
-                                    ad vero nihil pariatur commodi aut eveniet temporibus?
-                                </p>
+                            <div class="overlay-container">
+                                <div class="content">
+                                    <p>
+                                        this is my website.
+                                        You are welcome here. Visit my project.
+                                        I'm open for colleboration.
+                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Consequuntur excepturi facilis, inventore eos eum rem quos natus rerum voluptatum veritatis sit aperiam 
+                                        ad vero nihil pariatur commodi aut eveniet temporibus?
+                                    </p>
+                                </div>
+                                <button class="button">
+                                    <a href="https://github.com/krishnachaudhary596/MovieRecommendationSystemUsingMachineLearning" target="_blank">
+                                        <h3>View Project</h3>
+                                    </a>
+                                </button>
                             </div>
-                            <button class="button">
-                                <a href="https://github.com/krishnachaudhary596/MovieRecommendationSystemUsingMachineLearning" target="_blank">
-                                    <h3>View Project</h3>
-                                </a>
-                            </button>
                         </div>
                     </div>
                 </div>
@@ -100,21 +102,23 @@
                     <div class="gym-project">
                         <div class="text-container">
                             <h2 class="name" style="font-size: 1.8em;">AI Gym Trainer</h2>
-                            <div class="content">
-                                <p>
-                                    this is my website.
-                                    You are welcome here. Visit my project.
-                                    I'm open for colleboration.
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                    Consequuntur excepturi facilis, inventore eos eum rem quos natus rerum voluptatum veritatis sit aperiam 
-                                    ad vero nihil pariatur commodi aut eveniet temporibus?
-                                </p>
+                            <div class="overlay-container">
+                                <div class="content">
+                                    <p>
+                                        this is my website.
+                                        You are welcome here. Visit my project.
+                                        I'm open for colleboration.
+                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Consequuntur excepturi facilis, inventore eos eum rem quos natus rerum voluptatum veritatis sit aperiam 
+                                        ad vero nihil pariatur commodi aut eveniet temporibus?
+                                    </p>
+                                </div>
+                                <button class="button">
+                                    <a href="https://github.com/krishnachaudhary596/AI-Trainer-Using-OpenCV-and-Mediapipe" target="_blank">
+                                        <h3>View Project</h3>
+                                    </a>
+                                </button>
                             </div>
-                            <button class="button">
-                                <a href="https://github.com/krishnachaudhary596/AI-Trainer-Using-OpenCV-and-Mediapipe" target="_blank">
-                                    <h3>View Project</h3>
-                                </a>
-                            </button>
                         </div>
                     </div>
                 </div>
@@ -124,21 +128,23 @@
                     <div class="dsa-project">
                         <div class="text-container">
                             <h2 class="name" style="font-size: 1.8em;">DSA Solutions</h2>
-                            <div class="content">
-                                <p>
-                                    this is my website.
-                                    You are welcome here. Visit my project.
-                                    I'm open for colleboration.
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                    Consequuntur excepturi facilis, inventore eos eum rem quos natus rerum voluptatum veritatis sit aperiam 
-                                    ad vero nihil pariatur commodi aut eveniet temporibus?
-                                </p>
+                            <div class="overlay-container">
+                                <div class="content">
+                                    <p>
+                                        this is my website.
+                                        You are welcome here. Visit my project.
+                                        I'm open for colleboration.
+                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Consequuntur excepturi facilis, inventore eos eum rem quos natus rerum voluptatum veritatis sit aperiam 
+                                        ad vero nihil pariatur commodi aut eveniet temporibus?
+                                    </p>
+                                </div>
+                                <button class="button">
+                                    <a href="https://github.com/krishnachaudhary596/Solution-of-DSA-by-Kunal" target="_blank">
+                                        <h3>View Project</h3>
+                                    </a>
+                                </button>
                             </div>
-                            <button class="button">
-                                <a href="https://github.com/krishnachaudhary596/Solution-of-DSA-by-Kunal" target="_blank">
-                                    <h3>View Project</h3>
-                                </a>
-                            </button>
                         </div>
                     </div>
                 </div>
@@ -149,7 +155,7 @@
     <!--End of Project Section-->
 
     <!--About Section-->
-    <section id="abountme">
+    <section id="about">
         <div class="about-container">
             <div class="about-section">
                 <div class="img-container">
