--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <span class="firstword">Solving</span><br/>Problems & Creating
                 <br/> Solutions
                 </h1>
-                <a href="images/Resume.pdf" class="resume-cta" target="_blank"><span class="resume-text">Resume</span></a>
+                <a href="./Resume.pdf" class="resume-cta" target="_blank"><span class="resume-text">Resume</span></a>
             </div>        
     </section>
     <!--End of Hero Section-->
