--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@
     <!--Social Icons/Contact me-->
     <section id="contactme">
         <div class="social-icons">
-            <div class="fb">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-            </div>
-            <div class="ig">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
+<!--             <div class="fb"> -->
+<!--                 <a href="#"><i class="fab fa-facebook"></i></a> -->
+<!--             </div> -->
+<!--             <div class="ig"> -->
+<!--                 <a href=""><i class="fab fa-instagram"></i></a> -->
+<!--             </div> -->
             <div class="tw">
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="https://twitter.com/Krishna_8469"><i class="fab fa-twitter"></i></a>
             </div>
             <div class="gh">
                 <a href="https://github.com/krishnachaudhary596"><i class="fab fa-github"></i></a>
