--- a/index.html
+++ b/index.html
@@ -162,10 +162,12 @@
                     <div class="about-image"></div>
                 </div>
                 <div class="about-text">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Dicta, ex delectus laboriosam sint voluptatibus asperiores
-                    culpa laborum, nam cumque ut a fugit amet illo sapiente
-                    nulla consequuntur dolore neque minus.
+                   - 👋 Hi, I’m Krishna Chaudhary
+                   - 🚀 I'm currently a Database Developer Intern at 1Rivet India
+                   - 👀 I’m interested in Data Analytic and Software Development
+                   - 🌱 I’m currently learning Java.
+                   - 💞️ I’m open to collaborate
+                   - 📫 If you have any interesting project idea and need help building it, shoot me an email at krishnachaudhary596@gmail.com
                 </div>
             </div>
         </div>
