--- a/index.html
+++ b/index.html
@@ -162,12 +162,14 @@
                     <div class="about-image"></div>
                 </div>
                 <div class="about-text">
-                   - 👋 Hi, I’m Krishna Chaudhary
-                   - 🚀 I'm currently a Database Developer Intern at 1Rivet India
-                   - 👀 I’m interested in Data Analytic and Software Development
-                   - 🌱 I’m currently learning Java.
-                   - 💞️ I’m open to collaborate
-                   - 📫 If you have any interesting project idea and need help building it, shoot me an email at krishnachaudhary596@gmail.com
+                   <ul>
+                      <li>👋 Hi, I’m Krishna Chaudhary</li>
+                      <li>🚀 I'm currently a Database Developer Intern at 1Rivet India</li>
+                      <li>👀 I’m interested in Data Analytics and Software Development</li>
+                      <li>🌱 I’m currently learning Java</li>
+                       <li>💞️ I’m open to collaborate</li>
+                      <li>📫 If you have any interesting project idea and need help building it, shoot me an email at krishnachaudhary596@gmail.com</li>
+                    </ul>
                 </div>
             </div>
         </div>
